8369805: [lworld] C2: assert(is_InlineType()) failed: invalid node class: Con